--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: var(--primary-color);
+    background-color: var(red);
     display: flex;
     justify-content: space-between;
     padding: 1rem;
